# Fraud-Detection-API

./: .gitignore  Procfile  README.md  app.py  pyproject.toml  requirements.txt  setup.sh
backend/: Dockerfile  app.py  credit_fraud.pkl
frontend/: app.py  index.html  package-lock.json  style.css
objects/: credit_fraud.pkl  encoder.pkl  scaler.pkl
