[tool.poetry]
name = "creditcardfrauddetection"
version = "0.1.0"
description = ""
authors = ["cse-vaibhav <jainvaibhav671@gmail.com>"]
readme = "README.md"
packages = [{include = "creditcardfrauddetection", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.23.4"
pandas = "^1.5.1"
seaborn = "^0.12.1"
sklearn = "^0.0"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
httptools = "^0.5.0"
uvloop = "^0.17.0"
gunicorn = "^20.1.0"
streamlit = "^1.13.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
kaggle = "^1.5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
